--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    
+
     <!-- Here is a header section that holds the navigation and header links -->
 
     <header>
@@ -46,138 +46,129 @@
                                 Store
                             </a>
                             <ul class="dropdown-menu w-100">
-                                <li class="mb-3">
-                                    <a class="dropdown-item" href="products.html"><small>Shop</small></a>
-                                </li>
-                                <!-- <li>
-                                    <hr class="dropdown-divider" />
-                                </li> -->
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="products.html">Shop the Latest</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/mac/">Mac</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/ipad/">iPad</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/iphone/">iPhone</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/watch/">Apple Watch</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/apple-vision-pro/">Apple Vision Pro</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold mb-5" href="https://www.apple.com/shop/accessories/all">Accessories</a>
-                                </li>
+                                <div class="row dropdowns">
+                                    <div class="col-lg-2">
+                                        <li class="mt-3">
+                                            <a class="dropdown-item" href="products.html"><small>Shop</small></a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item fs-5 fw-bold" href="products.html">Shop the Latest</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/mac/">Mac</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/ipad/">iPad</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/iphone/">iPhone</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/watch/">Apple
+                                                Watch</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/apple-vision-pro/">Apple Vision Pro</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item fs-5 fw-bold mb-5" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                                        </li>
+                                    </div>
+                                
+                                <div class="col-lg-2">
+                                    <li class="mt-3">
+                                        <a class="dropdown-item" href="products.html"><small>Quick Links</small></a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="products.html">Find a Store</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/mac/">Order Status</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/ipad/">Apple Trade In</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/iphone/">Financing</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/watch/">College Student
+                                            Offer</a>
+                                    </li>
+                                </div>
+                                <div class="col-lg-2">
+                                    <li class="mt-3">
+                                        <a class="dropdown-item" href="products.html"><small>Shop Special Stores</small></a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="products.html">Certified Refubrished</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/mac/">Education</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/ipad/">Business</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/iphone/">Veterans and Military</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item fs-7 fw-bold" href="https://www.apple.com/watch/">Government</a>
+                                    </li>
+                                </div>
+                            </div>
                             </ul>
-                            <ul class="dropdown-menu w-100">
-                                <li class="mb-3">
-                                    <a class="dropdown-item" href="products.html"><small>Quick Links</small></a>
-                                </li>
-                                <!-- <li>
-                                    <hr class="dropdown-divider" />
-                                </li> -->
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="products.html">Find a Store</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/mac/">Order Status</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/ipad/">Apple Trade In</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/iphone/">Financing</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/watch/">College Student Offer</a>
-                                </li>
-                            </ul>
-                            <ul class="dropdown-menu w-100">
-                                <li class="mb-3">
-                                    <a class="dropdown-item" href="products.html"><small>Shop</small></a>
-                                </li>
-                                <!-- <li>
-                                    <hr class="dropdown-divider" />
-                                </li> -->
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="products.html">Shop the Latest</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/mac/">Mac</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/ipad/">iPad</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/iphone/">iPhone</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/watch/">Apple Watch</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/apple-vision-pro/">Apple Vision Pro</a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item fs-5 fw-bold" href="https://www.apple.com/shop/accessories/all">Accessories</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/mac/">Mac</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/ipad/">iPad</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/iphone/">iPhone</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/watch/">Watch</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/apple-vision-pro/">Vision</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">AirPods</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/tv-home/">TV & Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Entertainment</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Support</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="login.html">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="registration.html"><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="20" height="20" fill="currentColor" class="bi bi-person-add"
-                                    viewBox="0 0 16 16">
-                                    <path
-                                        d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
-                                    <path
-                                        d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z" />
-                                </svg></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="checkout.html"><svg height="44" viewBox="0 8 14 44" width="14"
-                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="m11.3535 16.0283h-1.0205a3.4229 3.4229 0 0 0 -3.333-2.9648 3.4229 3.4229 0 0 0 -3.333 2.9648h-1.02a2.1184 2.1184 0 0 0 -2.117 2.1162v7.7155a2.1186 2.1186 0 0 0 2.1162 2.1167h8.707a2.1186 2.1186 0 0 0 2.1168-2.1167v-7.7155a2.1184 2.1184 0 0 0 -2.1165-2.1162zm-4.3535-1.8652a2.3169 2.3169 0 0 1 2.2222 1.8652h-4.4444a2.3169 2.3169 0 0 1 2.2222-1.8652zm5.37 11.6969a1.0182 1.0182 0 0 1 -1.0166 1.0171h-8.7069a1.0182 1.0182 0 0 1 -1.0165-1.0171v-7.7155a1.0178 1.0178 0 0 1 1.0166-1.0166h8.707a1.0178 1.0178 0 0 1 1.0164 1.0166z">
-                                    </path>
-                                </svg></a>
-                        </li>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/mac/">Mac</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/ipad/">iPad</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/iphone/">iPhone</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/watch/">Watch</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/apple-vision-pro/">Vision</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/shop/accessories/all">AirPods</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/tv-home/">TV & Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Entertainment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Accessories</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.apple.com/shop/accessories/all">Support</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="login.html">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="registration.html"><svg xmlns="http://www.w3.org/2000/svg" width="20"
+                                height="20" fill="currentColor" class="bi bi-person-add" viewBox="0 0 16 16">
+                                <path
+                                    d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0m-2-6a3 3 0 1 1-6 0 3 3 0 0 1 6 0M8 7a2 2 0 1 0 0-4 2 2 0 0 0 0 4" />
+                                <path
+                                    d="M8.256 14a4.5 4.5 0 0 1-.229-1.004H3c.001-.246.154-.986.832-1.664C4.484 10.68 5.711 10 8 10q.39 0 .74.025c.226-.341.496-.65.804-.918Q8.844 9.002 8 9c-5 0-6 3-6 4s1 1 1 1z" />
+                            </svg></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="checkout.html"><svg height="44" viewBox="0 8 14 44" width="14"
+                                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="m11.3535 16.0283h-1.0205a3.4229 3.4229 0 0 0 -3.333-2.9648 3.4229 3.4229 0 0 0 -3.333 2.9648h-1.02a2.1184 2.1184 0 0 0 -2.117 2.1162v7.7155a2.1186 2.1186 0 0 0 2.1162 2.1167h8.707a2.1186 2.1186 0 0 0 2.1168-2.1167v-7.7155a2.1184 2.1184 0 0 0 -2.1165-2.1162zm-4.3535-1.8652a2.3169 2.3169 0 0 1 2.2222 1.8652h-4.4444a2.3169 2.3169 0 0 1 2.2222-1.8652zm5.37 11.6969a1.0182 1.0182 0 0 1 -1.0166 1.0171h-8.7069a1.0182 1.0182 0 0 1 -1.0165-1.0171v-7.7155a1.0178 1.0178 0 0 1 1.0166-1.0166h8.707a1.0178 1.0178 0 0 1 1.0164 1.0166z">
+                                </path>
+                            </svg></a>
+                    </li>
                     </ul>
                 </div>
             </div>
@@ -186,12 +177,12 @@
 
     <!-- Here is a sub-header section that holds messages  -->
 
-    <div class="messageTab text-center">
+    <!-- <div class="messageTab text-center">
         <span>Join Us this Earth Day by recycling your Apple devices.
             <a href="https://www.apple.com/shop/trade-in#recycle" target="_self">Recycle for free <i
                     class="fa fa-angle-right"></i></a>
         </span>
-    </div>
+    </div> -->
 
     <!-- Here is the main content of the index page -->
 
