--- a/appleVisionPro/index.html
+++ b/appleVisionPro/index.html
@@ -15,7 +15,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
 			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
 			crossorigin="anonymous" />
-
+		<!-- <link rel="stylesheet" href="/css/site.css"> -->
 		<link rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 		<link rel="stylesheet"
@@ -30,7 +30,7 @@
 				<div class="container">
 					<ul class="navbar-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html"><svg height="45" viewBox="0 8 14 44" width="20"
+							<a class="nav-link" href="/index.html"><svg height="45" viewBox="0 8 14 44" width="20"
 									fill="currentColor" xmlns="http://www.w3.org/2000/svg">
 									<path
 										d="m13.0729 17.6825a3.61 3.61 0 0 0 -1.7248 3.0365 3.5132 3.5132 0 0 0 2.1379 3.2223 8.394 8.394 0 0 1 -1.0948 2.2618c-.6816.9812-1.3943 1.9623-2.4787 1.9623s-1.3633-.63-2.613-.63c-1.2187 0-1.6525.6507-2.644.6507s-1.6834-.9089-2.4787-2.0243a9.7842 9.7842 0 0 1 -1.6628-5.2776c0-3.0984 2.014-4.7405 3.9969-4.7405 1.0535 0 1.9314.6919 2.5924.6919.63 0 1.6112-.7333 2.8092-.7333a3.7579 3.7579 0 0 1 3.1604 1.5802zm-3.7284-2.8918a3.5615 3.5615 0 0 0 .8469-2.22 1.5353 1.5353 0 0 0 -.031-.32 3.5686 3.5686 0 0 0 -2.3445 1.2084 3.4629 3.4629 0 0 0 -.8779 2.1585 1.419 1.419 0 0 0 .031.2892 1.19 1.19 0 0 0 .2169.0207 3.0935 3.0935 0 0 0 2.1586-1.1368z">
@@ -103,6 +103,7 @@
 							<li class="nav-item">
 								<a class="nav-link" href="https://www.apple.com/tv-home/">TV & Home</a>
 							</li>
+							
 							<li class="nav-item">
 								<a class="nav-link" href="login.html">Login</a>
 							</li>
@@ -134,44 +135,91 @@
 			<!-- HERO SECTION ================================ -->
 			<div class="features-img">
 				<video src="/appleVisionPro/assets/BlinkingGuy.mp4" autoplay muted loop
-					style="width: 50%; margin-left: 25%; margin-top: -4%;" style="outline: hidden;"
+					style="width: 50%; margin-left: 25%; margin-top: -4%; outline: hidden; position: relative;"
 					alt="Video of a guy with a white shirt, wearing the new Apple Vision Pro. He blinks intermittently at the viewer">
-					<div style="flex-wrap: wrap;">
-						<div class="bottom-left">Bottom Left</div>
-						<div class="top-left">Top Left</div>
-						<div class="top-right">Top Right</div>
-						<div class="bottom-right">Bottom Right</div>
-						<div class="centered">Centered</div>
-					</div>
-
 				</video>
+				<div>
+					<img src="assets/images/apple_vision_pro_logo__ux94yix23r6y_large.png" style="width: 20%; position: absolute; top: 75%; left: 40%;">
+				</div>
+				<div  class="visionLinks">
+					<ul class="text-center" style="position: absolute; top: 85%; left: 43%;">
+						<li><a href="">Book a demo</a></li>
+						<li><a href="">Preview visionOS 2</a></li>
+					</ul>
+                 
+				</div>
 			</div>
-			<div class="features-img">
+
+			
+			<div class="features-img video-container">
 				<video src="/appleVisionPro/assets/VisionFirstDemo.mp4" autoplay muted loop
 					style="width: 100%; margin-top: -1%;" style="outline: hidden;"></video>
 				</video>
+				<div class="scrolling-text">
+					Apple Vision Pro seamlessly blends digital <br> content with your physical space. <br> <br> So you can work, watch,
+					relive memories, and <br> connect in ways never before possible. <br> <br> The era of spatial computing is here. <br> <br> <br>
+					<a href="">Watch the film</a>
+				</div>
 			</div>
 			<br>
 			<div class="features-img">
 				<video src="/appleVisionPro/assets/VisionProSpecs.mp4" autoplay muted loop
-					style="width:1000px; margin-top: 15%; margin-bottom: 15%; margin-left: 17%;"
+					style="width:1000px; margin:15% 25%;"
 					style="outline: hidden;"></video>
 				</video>
+				<div>
+					<img src="assets/images/apple_vision_pro_logo__ux94yix23r6y_large.png" style="width: 20%; position: absolute; top: 15%; left: 40%;">
+				</div>
+				<div class="look2">
+					<a href="#">Take a closer look</a>
+				</div>
 			</div>
-			<br>
-			<div class="features-img">
-				<video src="/appleVisionPro/assets/VisionProDeskDemo.mp4" autoplay muted loop
+
+			<div class="features-img video-container">
+				<video src="/appleVisionPro/assets/aeroplaneVision.mp4" autoplay muted loop
 					style="width: 100%; margin-top: -1%;" style="outline: hidden;"></video>
 				</video>
+				<div class="scrolling-text">
+					<span style="font-size: 25px;">Entertainment</span> <br>
+					The ultimate theater <br> Wherever you are.
+				</div>
 			</div>
 
 			<!-- fIRST DESIGN SECTION ================================ -->
 			<section class="section design">
-				<div class="container design-container">
+				<div class="row mb-5">
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3 fs-2 fw-bold">
+						A new dimension for  <br> entertainment.
+					</div>
+					<div class="col-lg-6 fs-4 mb-5">Apple Vision Pro can transform any room into your own<br> personal theater. Expand your movies, shows, and games to<br> your perfect size and experience them in Spatial Audio.<br> Apple Immersive Video puts you in the center of the action<br> with mind‑blowing immersion. And with more pixels than a<br> 4K TV for each eye, you can enjoy stunning content<br> wherever you are — on a long flight or the couch at home.
+					</div>
+					<div class="look3 mb-5">
+						<a href="#">Learn more about entertainment</a>
+					</div>
+				</div>
+			</section>
+			<div class="features-img video-container mt-5">
+				<video src="/appleVisionPro/assets/VisionProDeskDemo.mp4" autoplay muted loop
+					style="width: 100%; margin-top: -1%;" style="outline: hidden;"></video>
+				</video>
+				<div class="scrolling-text">
+					<span style="font-size: 25px;">Productivity</span> <br>
+					A workspace with <br> infinite space.
+				</div>
+			</div>
 
-					<div class="left-col">
-						<span class="design-subtitle">Productivity</span>
-						<h3 class="design-title">A workspace with infinite space.</h3>
+			<!-- sub first DESIGN SECTION ================================ -->
+			<section class="section design">
+				<div class="row mb-5">
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3 fs-2 fw-bold">
+						Discover new ways <br> to work.
+					</div>
+					<div class="col-lg-6 fs-4 mb-5">Apple Vision Pro gives you limitless space to get things <br> done. Organize everything you need anywhere around you, in <br> any way you like. Seamlessly bring in your Mac workflows <br> using Mac Virtual Display. Connect a Magic Keyboard, a <br>Magic Trackpad, and other Bluetooth accessories to expand <br> how you navigate. And with SharePlay in FaceTime, you can <br> collaborate with colleagues using apps together in real time.
+					</div>
+					<div class="look3 mt-5">
+						<a href="#">Learn more about productivity</a>
 					</div>
 				</div>
 			</section>
@@ -179,69 +227,74 @@
 
 			<!-- SECOND HERO SECTION RESUMED ================================ -->
 
-			<div class="features-img">
+			<div class="features-img mt-5">
 				<video src="/appleVisionPro/assets/VisionProGrandparent.mp4" autoplay muted loop
-					style="width: 100%; margin-top: -1%;" style="outline: hidden;"></video>
+					style="width: 100%;" style="outline: hidden;"></video>
 				</video>
+				<div class="scrolling-text">
+					<span style="font-size: 25px;">Photos and Videos</span> <br>
+					Be in the moment. <br> All over again.
+				</div>
 			</div>
 			<section class="section design">
-				<div class="container design-container">
-
-					<div class="left-col">
-						<span class="design-subtitle">Design</span>
-						<h3 class="design-title">Apple Vision Pro</h3>
+				<div class="row mb-5">
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3 fs-2 fw-bold">
+						Your memories  <br> come alive.
 					</div>
-
-					<br>
-					<div class="right-col">
-						<p class="design-description">
-							Apple Vision Pro seamlessly blends digital content with your physical space.
-							So you can work, watch, relive memories, and connect in ways never before possible.
-							The era of spatial computing is here.
-						</p>
+					<div class="col-lg-6 fs-4 mb-5">Apple Vision Pro is Apple’s first 3D camera. You can capture<br> magical spatial photos and spatial videos in 3D, then relive<br> those cherished moments like never before with immersive<br> Spatial Audio. Your existing library of photos and videos<br> looks incredible at remarkable scale — and coming this fall, <br>you’ll be able to transform your 2D photos into spatial photos<br> with just a tap. Even panoramas wrap around you — making <br>you feel like you’re standing right where you took them. You<br> can also take spatial videos with iPhone 15 Pro, then view<br> them on Apple Vision Pro.
+					</div>
+					<div class="look3 mb-5">
+						<a href="#">Learn more about photos and videos</a>
 					</div>
 				</div>
 			</section>
 			<!-- SECOND DESIGN SECTION ================================ -->
 
-			<div class="features-img">
+			<div class="features-img mt-5">
 				<video src="/appleVisionPro/assets/VisionProLivingRoomDemo.mp4" autoplay muted loop
-					style="width: 100%; margin-top: -1%;" style="outline: hidden;"></video>
+					style="width: 100%;" style="outline: hidden;"></video>
 				</video>
+				<div class="scrolling-text">
+					<span style="font-size: 25px;">Apps</span> <br>
+					Do what you love. <br> Reimagine how<br>you do it.
+				</div>
 			</div>
-
-
-
-			<!-- DESIGN SECTION ================================ -->
 			<section class="section design">
-				<div class="container design-container">
-
-					<div class="left-col">
-						<span class="design-subtitle">Photos and Videos</span>
-						<h3 class="design-title">Be in the moment.</h3>
-						<h3 class="design-title">All over again.</h3>
+				<div class="row mb-5">
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3 fs-2 fw-bold">
+						A world of apps.  <br> A world of discovery.
 					</div>
-
-					<br>
-					<div class="right-col">
-						<p class="design-description">
-							Seamlessly blends digital content with your physical
-							space. You can work, watch, relive memories, and connect in ways never before possible.
-							The era of spatial computing is here.
-						</p>
+					<div class="col-lg-6 fs-4 mb-5">Apple Vision Pro expands the experience of your go‑to apps<br> and opens up new possibilities in entertainment, <br>productivity, gaming, and more. Browse the web in Safari, <br>create a to‑do list in Notes, chat in Messages, and <br>seamlessly move between them with a glance. And explore <br>the App Store to discover an ever-expanding collection of<br> awe-inspiring spatial apps designed for Apple Vision Pro.<br>
+						<a href="" style="text-decoration: none; font-size: 19px;" class="mt-3">Visit the App Store</a>
+					</div>
+					<div class="look3 mb-5">
+						<a href="#">Learn more about apps</a>
 					</div>
 				</div>
 			</section>
-			<BR></BR>
 
-			<!-- FEATURES SECTION ================================ -->
-			<section class="section features">
-				<div class="container features-container grid">
-					<div class="features-img">
-
+			<div class="features-img mt-5">
+				<video src="/appleVisionPro/assets/large (1).mp4" autoplay muted loop
+					style="width: 100%;" style="outline: hidden;"></video>
+				</video>
+				<div class="scrolling-text">
+					<span style="font-size: 25px;">visionOS</span> <br>
+					An operating system <br> designed for spatial.
+				</div>
+			</div>
+			<section class="section design">
+				<div class="row mb-5">
+					<div class="col-lg-3"></div>
+					<div class="col-lg-3 fs-2 fw-bold">
+						Navigate spatial  <br> experiences.<br> Naturally.
 					</div>
-
-					<div class="features-data grid">
+					<div class="col-lg-6 fs-4 mb-5">Built on the foundation of macOS, iOS, and iPadOS, visionOS<br> enables powerful spatial experiences. Control<br> Apple Vision Pro with your eyes, hands, and voice — <br>interactions feel intuitive and magical. Simply look at an <br>element, tap your fingers together to select, and use the <br>virtual keyboard or dictation to type. And coming this fall,<br> visionOS 2 introduces even more ways to enhance work, <br>entertainment, and connecting with friends and family using <br>Apple Vision Pro.<br>
+						<a href="" style="text-decoration: none; font-size: 19px;" class="mt-3">Learn more about visionOS 2</a>
+					</div>
+					<div class="look3 mb-5">
+						<a href="#">Learn more about visionOS</a>
 					</div>
 				</div>
 			</section>
