--- a/Apple Cinema/store.html
+++ b/Apple Cinema/store.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="./Font-Awsome/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <link rel="stylesheet" href="./styles/store.css">
-  <title>Abel Cinema | Store</title>
+  <title>Apple Cinema | Store</title>
 </head>
 
 <body>
   <header>
-    <a href="index.html" class="logo">Abel Cinema</a>
+    <a href="index.html" class="logo">Apple Cinema</a>
     <ul class="nav">
       <li>
         <a href="index.html"><i class="fa fa-home" aria-hidden="true"></i></a>
